--- a/platformio.ini
+++ b/platformio.ini
@@ -18,11 +18,20 @@ monitor_filters =
 	default
 	send_on_enter
 monitor_echo = yes
+
+upload_flags = 
+    --before=default_reset
+    --after=hard_reset
+
 build_flags = 
     -DARDUINO_USB_MODE=1
     -DARDUINO_USB_CDC_ON_BOOT=1
 	-DCORE_DEBUG_LEVEL=3
 	-DBOARD_HAS_PSRAM
+
+monitor_dtr = 0
+monitor_rts = 0
+
 board_build.partitions = default.csv
 board_build.filesystem = spiffs
 upload_speed = 921600
